feat: CropService and CropController - Requisito 6 e 7